--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "@storybook/nextjs": "^7.4.1",
     "@storybook/react": "^7.4.1",
     "@storybook/testing-library": "^0.2.0",
+    "chromatic": "^7.1.0",
     "eslint-plugin-storybook": "^0.6.13",
     "storybook": "^7.4.1"
+  },
+  "resolutions": {
+    "jackspeak": "2.1.1"
   }
 }
