--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@tiptap/pm": "^2.1.9",
+    "@tiptap/react": "^2.1.9",
+    "@tiptap/starter-kit": "^2.1.9",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
