--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@tiptap/extension-table": "^2.1.9",
+    "@tiptap/extension-table-cell": "^2.1.9",
+    "@tiptap/extension-table-header": "^2.1.9",
+    "@tiptap/extension-table-row": "^2.1.9",
     "@tiptap/pm": "^2.1.9",
     "@tiptap/react": "^2.1.9",
     "@tiptap/starter-kit": "^2.1.9",
