--- a/package.json
+++ b/package.json
@@ -11,13 +11,27 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@mantine/core": "^6.0.20",
+    "@mantine/hooks": "^6.0.20",
+    "@mantine/tiptap": "^6.0.20",
+    "@tabler/icons-react": "^2.34.0",
+    "@tiptap/extension-color": "^2.1.10",
+    "@tiptap/extension-highlight": "^2.1.10",
+    "@tiptap/extension-link": "^2.1.10",
+    "@tiptap/extension-subscript": "^2.1.10",
+    "@tiptap/extension-superscript": "^2.1.10",
     "@tiptap/extension-table": "^2.1.9",
     "@tiptap/extension-table-cell": "^2.1.9",
     "@tiptap/extension-table-header": "^2.1.9",
     "@tiptap/extension-table-row": "^2.1.9",
-    "@tiptap/pm": "^2.1.9",
-    "@tiptap/react": "^2.1.9",
-    "@tiptap/starter-kit": "^2.1.9",
+    "@tiptap/extension-text-align": "^2.1.10",
+    "@tiptap/extension-text-style": "^2.1.10",
+    "@tiptap/extension-underline": "^2.1.10",
+    "@tiptap/pm": "^2.1.10",
+    "@tiptap/react": "^2.1.10",
+    "@tiptap/starter-kit": "^2.1.10",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
