--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   },
   "dependencies": {
     "@editorjs/editorjs": "^2.28.0",
+    "@editorjs/embed": "^2.5.3",
     "@editorjs/header": "^2.7.0",
+    "@editorjs/image": "^2.8.1",
     "@editorjs/list": "^1.8.0",
+    "@editorjs/paragraph": "^2.10.0",
+    "@editorjs/raw": "^2.4.0",
+    "@editorjs/table": "^2.2.2",
+    "@editorjs/text-variant-tune": "^1.0.1",
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
